# memory-system

./: .gitignore  README.md  mkdocs.yml
docs/: detailed-plan.md  (+3 more)
memoryd/: README.md  pyproject.toml
memoryd/src/memoryd/: __init__.py  chunking.py  cli.py  codex_agents.py  config.py  doctor.py  enc.py  index.py  inject.py  llm.py  mcp_server.py  mirror.py  mirror_codex.py  mirror_openclaw.py  notify.py  passphrase.py  schema.py  scope.py  scope_meta.py  search.py  server.py  setup.py  setup_cron.py  storage.py  sync.py
memoryd/src/memoryd/embeddings/: __init__.py  onnx_bge_m3.py  openai_provider.py
memoryd/src/memoryd/governance/: __init__.py  analyze.py  audit.py  decay.py  digest.py  gate.py  grants.py  merge.py
memoryd/src/memoryd/handoff/: generator.py
memoryd/src/memoryd/importers/: __init__.py  agents_md.py  auto_memory.py  claude_md.py  common.py  mcp_mem.py
memoryd/src/memoryd/knowledge_graph/: __init__.py  extract.py  migrations.py  query.py  relations.py  store.py  supersedes.py
memoryd/src/memoryd/llm/: __init__.py  anthropic_provider.py  base.py  claude_code_provider.py  factory.py  ollama_provider.py  openai_provider.py
memoryd/src/memoryd/llm/prompts/: __init__.py  extract_entities.py  judge_supersedes.py  profile_change_report.py  rewrite_identity.py
memoryd/src/memoryd/mcp_tools/: __init__.py  admin.py  judge.py  memory.py  promotions.py  session.py  util.py
memoryd/src/memoryd/migrations/: 001_initial_schema.sql  002_sensitive_scope.sql  003_sensitive_scopes_table.sql  004_knowledge_graph.sql  005_profile_self_learning.sql  __init__.py
memoryd/src/memoryd/profile/: __init__.py  evolution.py  identity.py  migrations.py  store.py  trends.py
memoryd/src/memoryd/prompts/: __init__.py  dura_extract.txt
memoryd/src/memoryd/search/: __init__.py  hybrid.py  scoring.py  sessions.py  vector.py
memoryd/src/memoryd/sync/: __init__.py  bundle.py  conflict.py  memories_json.py  schema.py
memoryd/src/memoryd/templates/: __init__.py  launchd-decay.plist.j2  launchd-digest.plist.j2  launchd-monthly-report.plist.j2  launchd-sync-push.plist.j2  launchd-weekly-identity.plist.j2  memory-searcher.md  systemd-decay.service.j2  systemd-decay.timer.j2  systemd-digest.service.j2  systemd-digest.timer.j2  systemd-monthly-report.service.j2  systemd-monthly-report.timer.j2  systemd-sync-push.service.j2  systemd-sync-push.timer.j2  systemd-weekly-identity.service.j2  systemd-weekly-identity.timer.j2  windows-decay.xml.j2  windows-digest.xml.j2  windows-monthly-report.xml.j2  windows-sync-push.xml.j2  windows-weekly-identity.xml.j2
memoryd/src/memoryd/tui/: __init__.py  digest.py
memoryd/src/memoryd/web/: __init__.py  routes.py  server.py
memoryd/src/memoryd/web/static/: base.css  cytoscape-loader.js  htmx-extras.js  style.css
memoryd/tests/: conftest.py  test_audit.py  test_auto_sync.py  test_chunking.py  test_cli.py  test_cli_audit.py  test_cli_audit_verify.py  test_cli_handoff.py  test_cli_import.py  test_cli_inject.py  test_cli_kg.py  test_cli_mutate.py  test_cli_profile.py  test_cli_query.py  test_cli_sensitive.py  test_config.py  test_doctor.py  test_e2e_real_flow.py  test_embeddings.py  test_enc.py  test_enc_cross_platform.py  test_enc_passphrase.py  test_gate.py  test_governance_analyze.py  test_governance_decay.py  test_governance_digest.py  test_governance_merge.py  test_grants.py  test_handoff_generator.py  test_hybrid.py  test_importers_agents_md.py  test_importers_auto_memory.py  test_importers_claude_md.py  test_importers_mcp_mem.py  test_index.py  test_inject.py  test_kg_extract.py  test_kg_query.py  test_kg_store.py  test_kg_supersedes.py  (+49 more)
(+115 files in other folders)
