[project]
name = "memoryd"
version = "0.1.0a0"
description = "Personal memory daemon — long-term memory governance MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "anthropic>=0.40",
    "keyring>=24",
    "cryptography>=42",
    "jinja2>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "textual>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
memoryd = "memoryd.cli:main"
memoryd-server = "memoryd.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memoryd"]

[tool.hatch.build.targets.wheel.force-include]
"src/memoryd/templates" = "memoryd/templates"
